--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,21 @@
 @import "./components/variables.scss";
+
+.app-wrapper {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  span {
+    color: $very-dark-cyan;
+    margin: 5px;
+    font-size: 24px;
+    line-height: 24px;
+    letter-spacing: 0.3em;
+
+    &:last-of-type {
+      margin-bottom: 3em;
+    }
+  }
+}
