--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,22 @@
 @import "./components/variables.scss";
 
+@font-face {
+  font-family: "SpaceMonoBold";
+  src: local("SpaceMonoBold"),
+    url("./fonts/SpaceMono/SpaceMono-Bold.ttf") format("truetype");
+  font-weight: 700;
+}
+
 :root {
   background-color: $light-grayish-cyan;
+  font-family: sans-serif;
+}
+
+html,
+body,
+#root {
+  margin: 0px;
+  height: 100%;
+  font-size: 24px;
+  font-family: SpaceMonoBold, sans-serif;
 }
