--- a/src/components/ValueButton.module.scss
+++ b/src/components/ValueButton.module.scss
@@ -10,6 +10,10 @@
   cursor: pointer;
   box-sizing: border-box;
   font-family: SpaceMonoBold, sans-serif;
+
+  @media (width: $mobile) {
+    width: 48%;
+  }
 }
 
 .inactiveButton {
