--- a/src/components/TipSelector.module.scss
+++ b/src/components/TipSelector.module.scss
@@ -22,6 +22,7 @@
     display: flex;
     margin: 10px 5px 5px;
     color: $dark-grayish-cyan;
+    @include mobileFont;
   }
 
   .input {
@@ -59,5 +60,13 @@
     &:hover {
       cursor: pointer;
     }
+
+    @media (width: $mobile) {
+      width: 48%;
+    }
+  }
+
+  @media (width: $mobile) {
+    margin: 0.8em auto;
   }
 }
