--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -1,3 +1,5 @@
+// Colors
+
 $strong-cyan: hsl(172, 67%, 45%);
 $very-dark-cyan: hsl(183, 100%, 15%);
 $dark-grayish-cyan: hsl(186, 14%, 43%);
@@ -5,3 +7,13 @@ $grayish-cyan: hsl(184, 14%, 56%);
 $light-grayish-cyan: hsl(185, 41%, 84%);
 $very-light-grayish-cyan: hsl(189, 41%, 97%);
 $white: hsl(0, 0%, 100%);
+
+// Screen width
+
+$mobile: 375px;
+
+@mixin mobileFont {
+  @media (width: $mobile) {
+    font-size: 18px;
+  }
+}
